[package]
name = "kora"
version = "0.1.1"
edition = "2024"

[package.metadata.deb]
maintainer = "Benjamin Haag <hello@benjaminhaag.me>"
depends = "$auto, openssh-client"
section = "utils"
priority = "optional"
assets = [
    ["target/release/kora", "usr/bin/", "755"],
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
